--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "app.js",
   "scripts": {
   "start": "node app.js",
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "build": "npm install & npm run build"
+  "build": "node app.js"
 },
   "keywords": [],
   "author": "",
