--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "scripts": {
   "start": "node app.js",
-  "build": "node app.js"
+  "build": "npm install"
 },
   "keywords": [],
   "author": "",
